--- a/lintcod_game/lintcod_game.vcxproj
+++ b/lintcod_game/lintcod_game.vcxproj
@@ -145,12 +145,14 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libtcod.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -160,6 +162,7 @@
     <ClInclude Include="Attacker.h" />
     <ClInclude Include="Destructible.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Gui.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -169,6 +172,7 @@
     <ClCompile Include="Attacker.cpp" />
     <ClCompile Include="Destructible.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Gui.cpp" />
     <ClCompile Include="lintcod_game.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="pch.cpp">
