Add items and inventory

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@
 /lintcod_game/Release/Attacker.obj
 /lintcod_game/Release/Ai.obj
 /lintcod_game/Release/Actor.obj
+/lintcod_game/x64/Debug/Pickable.obj
+/lintcod_game/x64/Debug/Container.obj
