Add save and load the game. Some refactor system of classes.

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,10 @@
 /lintcod_game/x64/Release/Pickable.obj
 /lintcod_game/x64/Release/Gui.obj
 /lintcod_game/x64/Release/Container.obj
+/.vs/lintcod_game/v15/ipch/AutoPCH/861c966923286fb0/ENGINE.ipch
+/.vs/lintcod_game/v15/ipch/a838488ec7d88296.ipch
+/.vs/lintcod_game/v15/ipch/9880f5a7aecc95c6.ipch
+/.vs/console-roguelike/v15/Browse.VC.db
+/.vs/console-roguelike/v15/.suo
+/lintcod_game/game.sav
+/lintcod_game/x64/Debug/Persistent.obj
